# lala

./: .editorconfig  .gitignore  CHANGELOG.md  CLI_USAGE.md  CONTRIBUTING.md  Cargo.toml  DOCS_STRUCTURE.md  IMPLEMENTATION.md  IMPLEMENTATION_VERIFICATION.md  INTEGRATION_SUMMARY.md  LICENSE-APACHE  LICENSE-MIT  PACKAGING.md  PROJECT_STATUS.md  README.md  installer.nsi  lala-ime-debug.sh  lala-ime.sh  lala.desktop  test_sample.rs  test_sample.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  gh-pages.yml  package-deploy.yml  release.yml
benches/: cli_bench.rs  performance.rs
core-cli/: Cargo.toml
core-cli/src/: main.rs
core-engine/: Cargo.toml
core-engine/src/: buffer.rs  cursor.rs  editor.rs  history.rs  lib.rs
docs/: IME-TROUBLESHOOTING.md  README_ar.md  README_fa.md  README_ja.md  README_ru.md  README_zh-CN.md  README_zh-TW.md
docs/community/: CODE_OF_CONDUCT.md  SECURITY.md
docs/development/: cli-design.md  publishing-guide.md
docs/en/: cli-usage.md  format-support.md.old  install.md.old
docs/ja/: CLI使い方.md  インストール.md  フォーマット対応.md  初心者ガイド.md
docs/readmeLangs/: README_ar.md  README_en.md  README_fa.md  README_ru.md  README_zh-CN.md  README_zh-TW.md
docs/release/: GITHUB_RELEASE_GUIDE.md  RELEASE_SUMMARY_v0.1.0.md  todo.md
docs/website/: index.html
gui/: Cargo.toml
gui-base/: Cargo.toml
gui-base/src/: lib.rs
gui-base/src/gui/: file_tree.rs  mod.rs
gui/src/: app.rs  editor_view.rs  main.rs
packaging/arch/: PKGBUILD
packaging/debian/: control
packaging/homebrew/: lala.rb
packaging/rpm/: lala.spec
packaging/scripts/: install.sh
packaging/windows/: installer.nsi
packaging/windows/chocolatey/: lala.nuspec
scripts/: release.sh
src/: app.rs  lib.rs  main.rs
src/cli/: html_view.rs  latex_view.rs  markdown_view.rs  mermaid_view.rs  mod.rs  tests.rs
src/core/: error.rs  mod.rs  rope.rs  tests.rs.disabled
src/core_engine/: buffer.rs  mod.rs
src/file_tree/: mod.rs
src/gui/: app.rs  app_state.rs  dialogs.rs  editor.rs  grep_panel.rs  highlighting.rs  markdown_preview.rs  menu.rs  mod.rs  previews.rs  search_panel.rs  tab.rs  theme.rs
src/llm/: mod.rs
src/search/: buffer_search.rs  grep.rs  mod.rs
tests/: core_engine_test.rs  end_to_end_test.rs  file_operations_test.rs  integration_test.rs  llm_test.rs  preview_test.rs
tests/fixtures/: diagram.mmd  document.tex  sample.html  sequence.mmd  test_sample.md
