[package]
name = "lala"
version = "0.1.0"
edition = "2021"
authors = ["lala contributors"]

[[bin]]
name = "lala"
path = "src/main.rs"

[dependencies]
# GUI framework
eframe = "0.29"
egui = "0.29"

# Text rope for efficient text editing
ropey = "1.6"

# Regular expressions
regex = "1.11"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Fast file walking with .gitignore support
ignore = "0.4"
walkdir = "2.4"

# Channel for async communication
flume = "0.11"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization (for settings, etc.)
serde = { version = "1.0", features = ["derive"] }

# Command line argument parsing
clap = { version = "4.4", features = ["derive"] }

# Logging
env_logger = "0.11"
log = "0.4"

# Syntax highlighting
syntect = "5.2"

# Markdown parsing
pulldown-cmark = "0.12"

[dev-dependencies]
tempfile = "3.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
