[package]
name = "lala"
version = "0.1.0"
edition = "2021"
authors = ["lala contributors"]
description = "A modern, lightweight text editor with GUI and CLI support for Markdown, HTML, Mermaid, and LaTeX"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/lala"
homepage = "https://github.com/yourusername/lala"
documentation = "https://github.com/yourusername/lala/blob/main/README.md"
keywords = ["editor", "markdown", "latex", "mermaid", "html"]
categories = ["command-line-utilities", "text-editors", "visualization"]
readme = "README.md"
exclude = [
    "tests/fixtures/*",
    ".git*",
    ".github/*",
]

[[bin]]
name = "lala"
path = "src/main.rs"

[dependencies]
# GUI framework
eframe = "0.33"
egui = "0.33"

# Text rope for efficient text editing
ropey = "1.6"

# Regular expressions
regex = "1.11"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Fast file walking with .gitignore support
ignore = "0.4"
walkdir = "2.4"

# Channel for async communication
flume = "0.11"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization (for settings, etc.)
serde = { version = "1.0", features = ["derive"] }

# Command line argument parsing
clap = { version = "4.4", features = ["derive"] }

# Logging
env_logger = "0.11"
log = "0.4"

# Syntax highlighting
syntect = "5.2"

# Markdown parsing
pulldown-cmark = "0.12"

# Terminal colors and formatting
colored = "2.1"
terminal_size = "0.3"

# Format support: HTML, Mermaid, LaTeX
html2text = "0.12"        # HTML to text conversion
scraper = "0.19"          # HTML parsing
ego-tree = "0.6"          # For HTML DOM traversal

# Directory access
dirs = "5.0"              # Cross-platform directory paths

# HTTP client for LLM integration (optional feature)
reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }
serde_json = "1.0"

[features]
default = []
llm = ["reqwest"]  # Optional LLM integration feature

[dev-dependencies]
tempfile = "3.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
