[package]
name = "core-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
ropey.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
