[package]
name = "gui-base"
version.workspace = true
edition.workspace = true

[dependencies]
eframe = "0.28"
egui = "0.28"
tokio.workspace = true
anyhow.workspace = true
ignore.workspace = true
flume.workspace = true
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
