[package]
name = "lala-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "lala"
path = "src/main.rs"

[dependencies]
core-engine = { path = "../core-engine" }
eframe.workspace = true
egui.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
anyhow.workspace = true
env_logger = "0.11"
